added sql and JavaFX dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,21 @@
       <artifactId>junit-jupiter-params</artifactId>
       <version>5.9.1</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.30</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>19</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>19</version>
+    </dependency>
   </dependencies>
 
   <build>
