--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
       <artifactId>javafx-controls</artifactId>
       <version>19</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-maven-plugin</artifactId>
+      <version>0.0.8</version>
+      <type>maven-plugin</type>
+    </dependency>
   </dependencies>
 
   <build>
