--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
       <version>0.0.8</version>
       <type>maven-plugin</type>
     </dependency>
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx-fontawesome</artifactId>
+      <version>4.7.0-9.1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
